k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: friend-net
spec:
  selector:
    app: auth-service
  ports:
    - port: 8080
      targetPort: 8080
